[package]
name = "smrng"
version = "0.1.0"
edition = "2021"
description = "A simple command line tool for printing information about RNG loops and drop chances in Super Metroid"
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
